ラウンドの状態を追加

--- a/docs/現在の問題点.md
+++ b/docs/現在の問題点.md
@@ -1,3 +1,5 @@
-ルームIDが長すぎる。せめてコピーできるようにしてほしい。
-参加しても、リロードしないと参加したことがわからない。
-リロードすると参加していない人が増える。
+ゲームが正しく開始されない。ラウンド開始がうまく動いていない。
+フェーズ：ラウンド中となっているが、画面に何も変化がない。対戦画面的なものが欲しい。
+参加した方がリロードしないと、反映されない。リロードするとどちらにも反映される
+ルームIDを合言葉形式にするのはどう？
+ロビーで離脱ボタンもほしい。
