--- a/docs/現在の問題点.md
+++ b/docs/現在の問題点.md
@@ -1,5 +1,2 @@
-ゲームが正しく開始されない。ラウンド開始がうまく動いていない。
-フェーズ：ラウンド中となっているが、画面に何も変化がない。対戦画面的なものが欲しい。
-参加した方がリロードしないと、反映されない。リロードするとどちらにも反映される
-ルームIDを合言葉形式にするのはどう？
-ロビーで離脱ボタンもほしい。
+ルームを開くときに詳細設定でターン設定(何周するか)と基本感情からだけ選ぶモードにするか、応用感情も含めたモードにするかを選択できるようにしたい
+あと、応用感情のモードは８択にしてほしい。
