スピーカー側で感情が表示されないバグを修正

--- a/docs/現在の問題点.md
+++ b/docs/現在の問題点.md
@@ -1,2 +1,3 @@
-ルームを開くときに詳細設定でターン設定(何周するか)と基本感情からだけ選ぶモードにするか、応用感情も含めたモードにするかを選択できるようにしたい
-あと、応用感情のモードは８択にしてほしい。
+正解の感情が表示されない。
+詳細設定はルーム内で変えられるようにしたい。ゲームを開始する前に変更可能にしてほしい。
+８択が変更されないのがつまらない。スピーカーに表現させる感情もこの８択の中からしか表示されないのは面白くない。
