--- a/docs/現在の問題点.md
+++ b/docs/現在の問題点.md
@@ -1,3 +1,3 @@
-正解の感情が表示されない。
-詳細設定はルーム内で変えられるようにしたい。ゲームを開始する前に変更可能にしてほしい。
-８択が変更されないのがつまらない。スピーカーに表現させる感情もこの８択の中からしか表示されないのは面白くない。
+ロビー作成、入室時には詳細設定はいらない。
+結果発表時に正解感情が表示されない。
+ラウンド開始ボタンと次のラウンドボタンが混在しているのが気持ち悪い
