トップ画面から詳細設定を削除

--- a/docs/現在の問題点.md
+++ b/docs/現在の問題点.md
@@ -1,3 +1,5 @@
 トップ画面には詳細設定はいらない。
 bug:結果発表時に正解感情が表示されない。
 ラウンド開始ボタンと次のラウンドボタンが混在しているのが気持ち悪い
+次のゲームに行った時に最終結果発表が残り続けていてUXが悪い。
+規定周していないのに、詳細設定をいじれる仕様は良くない。詳細設定はゲームの開始するときだけ表示してほしい。
