bug-fix:ポイントが表示されなくなる

--- a/docs/現在の問題点.md
+++ b/docs/現在の問題点.md
@@ -1,3 +1,2 @@
-bug:結果発表時に正解感情が表示されない。
-次のゲームに行った時にホスト以外の画面で最終結果発表が残り続けていてUXが悪い。
-規定周していないのに、詳細設定をいじれる仕様は良くない。詳細設定はゲームの開始するときだけ表示してほしい。
+試合(規定のラウンド)が終わるまで、現在の設定を表示・変更可能である必要はありません。試合が終われば、現在の設定を表示、変更可能であって欲しい。
+また、合ってるのかどうかがポイントを見ないとわからない
