--- a/docs/現在の問題点.md
+++ b/docs/現在の問題点.md
@@ -2,4 +2,4 @@
 ユーザーが増えた時のUIが悪い
 投票が英語で表示されることがある。
 i18nで英語対応して欲しい。
-ゲーム開始時、指定したラウンドが終わるまでは設定変更ボタン,ゲーム開始ボタンは非表示にしてほしい。ラウンド開始ボタンは継続で表示してほしい。
+ゲーム開始時から、指定したラウンド数が終了するまでは、「設定変更ボタン」と「ゲーム開始ボタン」を非表示にしてください。一方で、「ラウンド開始ボタン」は常に表示されたままにしてください。
