--- a/docs/現在の問題点.md
+++ b/docs/現在の問題点.md
@@ -1,5 +1,1 @@
-スマホ時のUIが悪い
-ユーザーが増えた時のUIが悪い
-投票が英語で表示されることがある。
-i18nで英語対応して欲しい。
-ゲーム開始時から、指定したラウンド数が終了するまでは、「設定変更ボタン」と「ゲーム開始ボタン」を非表示にしてください。一方で、「ラウンド開始ボタン」は常に表示されたままにしてください。
+ゲーム開始時から、指定したラウンド数が終了するまでは、現在の設定(currentSetting)は非表示にしてください。
