録音機能追加

--- a/docs/要件定義.md
+++ b/docs/要件定義.md
@@ -1,4 +1,7 @@
-# 🎭 音声演技 × 感情推定ゲーム 要件定義書
+# 🎭 音声演技 × 感情推定ゲーム 要件定義書（音声録音・再生対応版）
+
+> **実装状況:** ✅ 音声録音・再生機能実装済み  
+> **最終更新:** 2025-06-13
 
 ## 🎮 ゲームモード
 
@@ -51,15 +54,23 @@
 
 ---
 
-## 🔁 ラウンド進行フロー（改訂版）
+## 🔁 ラウンド進行フロー（音声録音・再生対応版）
 
-| フェーズ | 主な処理 | 表示内容 |
+| フェーズ | 主な処理 | 表示内容・実装状況 |
 |---------|----------|-----------|
-| ① セリフ & 感情決定 | LLMでセリフ生成、感情選択（プルダウン） | セリフ：非公開<br>感情：非公開 |
-| ② スピーカー選出 | 自動で順番に決定 | スピーカーに「セリフ＋感情」表示（DM） |
-| ③ 演技フェーズ | スピーカーがセリフを音読 | リスナーには「セリフの文字列のみ」表示 |
-| ④ 投票フェーズ | リスナーが感情を4択/8択で投票 | 投票UI + 残り時間バー |
-| ⑤ 結果表示 | 正解感情と得点を全体表示 | 正解発表・得点アニメーション表示 |
+| ① セリフ & 感情決定 | LLMでセリフ生成、感情自動選択 | ✅ OpenAI API統合済み |
+| ② スピーカー選出 | 自動で順番に決定 | ✅ speaker_emotionイベントでDM送信済み |
+| **③ 音声録音フェーズ** | **スピーカーが音声録音** | **✅ AudioRecorder.tsx実装済み** |
+| **④ 音声配信フェーズ** | **録音データをリアルタイム配信** | **✅ Socket.IO音声送信実装済み** |
+| **⑤ 音声再生フェーズ** | **リスナーが音声を再生** | **✅ AudioPlayer.tsx実装済み** |
+| ⑥ 投票フェーズ | リスナーが感情を4択/8択で投票 | ✅ 動的選択肢生成済み |
+| ⑦ 結果表示 | 正解感情と得点を全体表示 | ✅ 正解発表・得点計算済み |
+
+### 🎤 音声機能詳細
+- **録音方式**: MediaRecorder API（WebM/Opus形式）
+- **送信方式**: Socket.IO `audio_send` イベント（ArrayBuffer）
+- **再生方式**: Blob URL生成 + HTML5 Audio
+- **データ保存**: AudioRecording モデルでDB永続化対応
 
 ---
 
@@ -72,40 +83,71 @@
 
 ## 👥 プレイ人数
 
-- 最小人数：2人（スピーカー1＋リスナー2）
-- 最大：上限なし（パフォーマンスとUI制限による）
+- 最小人数：2人（スピーカー1＋リスナー1）✅ 実装済み
+- 最大：上限なし（パフォーマンスとUI制限による）✅ 実装済み
 
 ---
 
-## 📡 通信・表示仕様
+## 📡 通信・表示仕様（実装済み）
 
-- WebSocket によるリアルタイム通信
-- 感情データ：**スピーカーのみにDM送信**
-- セリフテキスト：**全体に公開**
-- 投票結果・得点：**全体ブロードキャスト**
-
----
-
-## ⚙️ オプション設定（ホスト or 投票）
-
-- 使用モード：基本 / 応用
-- 投票選択肢数：4択 or 8択
-- スピーカー順：ランダム or 順番
+- ✅ WebSocket によるリアルタイム通信（Socket.IO）
+- ✅ 感情データ：**スピーカーのみにDM送信** (`speaker_emotion`イベント)
+- ✅ セリフテキスト：**全体に公開** (`round_start`イベント)
+- ✅ **音声データ：リアルタイム配信** (`audio_send`/`audio_received`イベント)
+- ✅ 投票結果・得点：**全体ブロードキャスト** (`round_result`イベント)
 
 ---
 
-## 📝 実装観点メモ
+## ⚙️ オプション設定（実装済み）
 
-- LLM セリフ生成API：OpenAI / Claude など
-- WebSocket実装：room/speaker/clients分離
-- 感情選択UI：`<select>` or ラジオボタン
-- 投票管理：非同期集計、タイムアウト処理
-- - 音声アップロード方式: 録音完了後に MediaRecorder で生成した Blob を Socket.IO の binary イベントでアップロード（遅延は増えるが帯域負荷が少ない）。将来的に BGM 合成などリアルタイム加工が必要になった場合のみ WebRTC ベースのストリーミング実装に差し替えられるよう、インターフェース層で抽象化しておく。
+- ✅ 使用モード：基本 / 応用（設定UI実装済み）
+- ✅ 投票選択肢数：4択 or 8択（動的生成実装済み）
+- ✅ スピーカー順：ランダム or 順番（ゲーム設定で選択可能）
+- ✅ ラウンド数：1-10ラウンド（設定可能）
 
+---
 
-## 💡 タイトル案（ゲーム名）
+## 📝 実装完了項目
+
+- ✅ **LLM セリフ生成API**: OpenAI GPT-4o 統合完了
+- ✅ **WebSocket実装**: Socket.IO ルーム管理・音声配信実装完了
+- ✅ **感情選択UI**: 動的選択肢生成実装完了
+- ✅ **投票管理**: 非同期集計・結果表示実装完了
+- ✅ **音声録音・再生**: MediaRecorder + Socket.IO バイナリ送信実装完了
+- ✅ **データベース統合**: AudioRecording, MACアドレス対応
+- ✅ **UI/UX**: AudioRecorder/AudioPlayer コンポーネント実装完了
+
+## 🎵 音声機能の技術詳細
+
+### 録音→送信→再生フロー
+```mermaid
+sequenceDiagram
+    participant S as Speaker
+    participant F as Frontend
+    participant B as Backend
+    participant L as Listener
+    
+    S->>F: 録音開始ボタン
+    F->>F: MediaRecorder.start()
+    S->>F: 録音停止ボタン
+    F->>F: Blob生成（WebM/Opus）
+    F->>F: FileReader.readAsArrayBuffer()
+    F->>B: Socket.IO audio_send(ArrayBuffer)
+    B->>B: AudioRecording.save(DB)
+    B->>L: Socket.IO audio_received(ArrayBuffer)
+    L->>L: Blob生成 + URL.createObjectURL()
+    L->>L: HTMLAudioElement.play()
+```
+
+### 技術仕様
+- **音声形式**: WebM container + Opus codec
+- **品質設定**: echoCancellation + noiseSuppression 有効
+- **転送方式**: Socket.IO バイナリイベント（最大10MB対応）
+- **ストレージ**: PostgreSQL BYTEA（将来的に外部ストレージ移行可能）
+
+## 💡 ゲーム名
 
 | タイトル | 意味・ニュアンス |
 |----------|------------------|
-| **エモグチ！（EMOGUCHI!）** | 感情（Emotion）＋ 口（Speech） |
+| **エモグチ！（EMOGUCHI!）** | 感情（Emotion）＋ 口（Speech）+ 音声録音対応 |
 ---
