--- a/docs/技術選定.md
+++ b/docs/技術選定.md
@@ -1,9 +1,9 @@
-# 🛠️ EMOGUCHI 技術スタック設計（保存なし構成）
+# 🛠️ EMOGUCHI 技術スタック設計（音声録音・再生対応版）
 
 ## 🎯 コンセプト
 
-本ゲーム「エモグチ（EMOGUCHI）」は、**保存しない・軽量セッション制のリアルタイム音声パーティゲーム**です。  
-そのため、永続的なDBや外部ストレージを使わず、**メモリとWebSocket中心の構成**とします。
+本ゲーム「エモグチ（EMOGUCHI）」は、**リアルタイム音声録音・再生機能付き感情推測パーティゲーム**です。  
+**ハイブリッド構成**として、ゲーム進行は高速メモリ管理、音声データ・MACアドレス・感情データは永続化DBで管理します。
 
 ---
 
@@ -14,21 +14,25 @@
 | **TypeScript + React** | UI構築 | 型安全で保守しやすい。Socket.IOとの相性◎ |
 | **Next.js（App Router）** | ページ遷移、構成管理 | デプロイしやすく、プロジェクト構成が整理しやすい |
 | **Tailwind CSS** | スタイリング | 高速なスタイリングに適し、演出・アニメーションに強い |
-| **Zustand** | グローバルステート管理 | 軽量でSocket連携にも向く。useStoreが直感的 |
-| **Socket.IO Client** | WebSocket通信 | ルーム管理やラウンド進行、得点通知に使用 |
+| **Zustand** | グローバルステート管理 | 軽量でSocket連携にも向く。音声URL管理も対応 |
+| **Socket.IO Client** | WebSocket通信 | ルーム管理やラウンド進行、**音声データ送信**に使用 |
+| **MediaRecorder API** | **音声録音** | **ブラウザ標準API、WebM/Opus形式で高品質録音** |
+| **Web Audio API** | **音声再生制御** | **音声ファイルの再生・停止、音量制御** |
+| **FileReader API** | **バイナリ変換** | **Blob → ArrayBuffer変換でSocket.IO送信対応** |
 
 ---
 
-## 🧠 バックエンド（保存なし構成）
+## 🧠 バックエンド（ハイブリッド構成）
 
 | 技術 | 用途 | 理由・備考 |
 |------|------|------------|
-| **FastAPI** | REST + WebSocketサーバー | 非同期、構造がシンプル、LLM連携にも適している |
-| **Socket.IO（ASGI対応）** | WebSocketルーム管理 | クライアントとの互換性があり、ルームやブロードキャストも簡単 |
+| **FastAPI** | REST + WebSocketサーバー | 非同期、構造がシンプル、LLM連携、**音声処理**にも適している |
+| **Socket.IO（ASGI対応）** | WebSocketルーム管理 | クライアントとの互換性、**10MBバイナリデータ対応** |
 | **Uvicorn** | ASGIサーバー起動 | FastAPIと組み合わせて軽量に動作 |
-| **Pydantic v2** | 型定義とバリデーション | イベントごとの安全なデータ送受信に使う |
+| **Pydantic v2** | 型定義とバリデーション | **AudioRecording, Player, Round拡張モデル** |
 | **OpenAI API** | セリフ生成 | 感情ラベルに応じたセリフを生成するためのLLM活用 |
-| ❌ Redis / DB | 使用しない | すべてメモリ上（辞書）で一時管理するため不要 |
+| **PostgreSQL（予定）** | **音声データ永続化** | **AudioRecording, MACアドレス、感情データ保存** |
+| **StateStore抽象化** | **DB操作インターフェース** | **メモリ→PostgreSQL移行を容易にする設計** |
 
 ---
 
@@ -43,13 +47,15 @@
 
 ---
 
-## 🎙️ 音声処理（クライアントサイド）
+## 🎙️ 音声処理（実装済み）
 
-| 技術 | 用途 | 備考 |
-|------|------|------|
-| **MediaRecorder API** | 音声録音 | ブラウザでスピーカーの音声を取得 |
-| **Web Audio API** | 音声再生・音量制御 | 投票フェーズ前の再生確認など |
-| **ffmpeg.wasm**（任意） | フォーマット変換 | 音声のダウンロード・変換に必要な場合のみ利用 |
+| 技術 | 用途 | 実装状況 |
+|------|------|----------|
+| **MediaRecorder API** | スピーカー音声録音 | ✅ useMediaRecorder.ts で実装済み |
+| **Web Audio API** | リスナー音声再生 | ✅ AudioPlayer.tsx で実装済み |
+| **Socket.IO Binary** | リアルタイム音声配信 | ✅ audio_send/audio_received イベント実装済み |
+| **ArrayBuffer ⇔ Blob** | データ形式変換 | ✅ フロントエンド・バックエンド両対応 |
+| **WebM/Opus コーデック** | 音声圧縮 | ✅ ブラウザ標準、高音質・低容量 |
 
 ---
 
@@ -68,20 +74,22 @@
 
 | 特徴 | 説明 |
 |------|------|
-| 🎯 **軽量＆高速** | データベース非依存、即時性を重視 |
-| 🧠 **シンプルな状態管理** | すべてPythonのメモリ辞書で完結 |
-| 🔌 **リアルタイム性重視** | WebSocketベースの進行に特化 |
-| 🛠️ **拡張性確保** | 将来的なスコア保存や音声アップロードにも対応しやすい構成を意識済み |
+| 🎯 **ハイブリッド最適化** | ゲーム進行は高速メモリ、音声データは永続化DBで分離 |
+| 🧠 **拡張性重視設計** | StateStore抽象化により、PostgreSQL移行が容易 |
+| 🔌 **リアルタイム音声対応** | Socket.IO 10MBバイナリ対応、音声遅延最小化 |
+| 🎤 **ブラウザ標準活用** | MediaRecorder/Web Audio API、プラグイン不要 |
+| 🛠️ **段階的実装** | メモリ版→DB版へのスムーズな移行パス確保済み |
 
 ---
 
-## 🔮 将来的な拡張プラン（必要に応じて）
+## 🔮 将来的な拡張プラン
 
-| 目的 | 追加技術 |
-|------|-----------|
-| スコア保存 | Supabase / PostgreSQL |
-| 録音アップロード | Supabase Storage / AWS S3 |
-| 再接続サポート | Redis などの共有メモリ |
-| ゲーム履歴保存 | `flush_to_db()` 関数を組み込み可能にする構造設計 |
+| 目的 | 追加技術 | 現在の対応状況 |
+|------|-----------|----------------|
+| PostgreSQL移行 | Supabase / PostgreSQL | ✅ StateStore抽象化済み |
+| 音声ファイル外部保存 | Supabase Storage / AWS S3 | 🔄 現在はDB内BYTEA、容易に移行可能 |
+| リアルタイム音声ストリーミング | WebRTC / MediaStream | 🔄 録音完了後送信から段階的移行可能 |
+| 音声品質向上 | ノイズキャンセリング強化 | ✅ echoCancellation, noiseSuppression実装済み |
+| 再接続サポート | Redis セッション管理 | 🔄 現在メモリベース、Redis移行容易 |
 
 ---
