スピーカーローテーションが動作しない問題をfix

--- a/docs/追加したい機能.md
+++ b/docs/追加したい機能.md
@@ -1,65 +1,4 @@
-# プルチックの感情の輪（3層構造）UI拡張 要件定義書
+ゲームが始まった後に、ルームに参加するとゲームに参加できない上に、ルームに入っている人が投票できないのに、ルーム全員分の投票が必要となるため、ゲームが止まってしまう。途中でexitした場合も同様におかしくなってしまいます。改善案はありますか？DB含めて扱いが難しい。
 
-## 1. 概要
-
-本ドキュメントは、既存のEmotion Wheel UIを拡張し、**Plutchikの感情の輪における3層（強・中・弱）すべての感情カテゴリを選択可能にするUI機能**の要件を定義する。
-
-## 2. 背景と目的
-
-現行のUIでは、8つの基本感情（Plutchik軸）のみが選択可能であったが、
-
-* \*\*感情の強度（弱・中・強）\*\*を表現可能にする
-* **24種類の感情語を用いたより細かい自己表現**を可能にする
-
-ことにより、ユーザー体験を豊かにし、感情推定の正確性とインタラクティブ性を向上させる。
-
-## 3. 機能要件
-
-### 3.1 感情カテゴリ
-
-* 8つの基本感情軸（Plutchik原型）に対し、以下の3強度を導入し、**合計24感情**とする：
-
-  * **強**：激怒、陶酔、恐怖、驚嘆、悲嘆、強い嫌悪、攻撃、敬愛
-  * **中**：怒り、喜び、恐れ、驚き、悲しみ、嫌悪、期待、信頼
-  * **弱**：苛立ち、平穏、不安、放心、哀愁、うんざり、関心、容認
-
-* 各感情は**日本語と英語を併記**（例：「喜び (joy)」）で表示される
-
-### 3.2 UI構造
-
-* プルチックの感情の輪は\*\*3層構造の円グラフ（ドーナツ型）\*\*として表示
-
-* 各セクターは以下の特性を持つ：
-
-  * 色分け：基本感情軸に対応
-  * セグメントごとに個別にホバー/クリックが可能
-  * センターから外側へ向かって**強度が低→高**になる視覚設計
-
-* 使用技術：
-
-  * **SVG** を採用し、各感情要素を個別にDOMノードとして扱う
-  * モバイル・PCどちらでも操作可能
-
-### 3.3 選択・出力
-
-* ユーザーは任意の感情セクションを**クリックまたはタップで選択**
-* 出力は以下の形式：
-
-  * `emotion_label_ja`: 日本語感情名
-  * `emotion_label_en`: 英語感情名
-  * `intensity_level`: 弱／中／強
-  * `axis`: 感情軸（例: joy, fear, sadness...）
-
-## 4. 非機能要件
-
-* **レスポンス性能**：選択操作に即応し、UIのラグを感じさせない
-* **アクセシビリティ**：
-
-  * 色弱対応のため、色だけでなく形・絵文字・ラベルで感情を区別可能にする
-  * 日本語・英語両言語での補助表示を実装
-* **拡張性**：将来的にカスタム感情や、絵文字・音声・動作といった感情表現要素との連携を想定
-
-## 5. 今後の拡張案
-
-* 選択された感情に応じた**アニメーション演出や音声フィードバック**
-* **ユーザー間の感情比較・集計機能**（例：グループ内の分布表示）
+続き。あとラウンド固定制の何が嬉しいの？
+投票する際に制限時間をとか？そしたらexitしてもゲームが止まることはなさそう。あと、再接続は難しいよね・・・？
