--- a/docs/追加したい機能.md
+++ b/docs/追加したい機能.md
@@ -1,4 +1,5 @@
 ゲームが始まった後に、ルームに参加するとゲームに参加できない上に、ルームに入っている人が投票できないのに、ルーム全員分の投票が必要となるため、ゲームが止まってしまう。途中でexitした場合も同様におかしくなってしまいます。改善案はありますか？DB含めて扱いが難しい。
 
 続き。あとラウンド固定制の何が嬉しいの？
-投票する際に制限時間をとか？そしたらexitしてもゲームが止まることはなさそう。あと、再接続は難しいよね・・・？
+投票する際に制限時間をとか？そしたらexitしてもゲームが止まることはなさそう。2ラウンド投票しなかったら、除外するとか。
+あとは再接続はできたら嬉しいけど、今の仕様だと難しい・・・？
